# cluely-hidden

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  PLAN.md  README.md  RELEASE-v0.5.0.md  ROADMAP.md  RUN.md  SECURITY.md  TEAM.md  VISION.md  gen-icons.py  index.html  package-lock.json  package.json  settings.html  tailwind.config.js  vite.config.ts
.github/workflows/: macos-release.yml
docs/: DESIGN-UX-OVERHAUL.md  E2E-v0.6.md  PARITY-AUDIT.md  ROADMAP.md  SIGNING.md  SPRINT-C.md  TEST-INSTALL.md  spike-system-audio.md
scripts/: package-test.sh  signing.env.example
src/: App.tsx  settings.tsx
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  config.rs  error.rs  lib.rs  main.rs  settings.rs
src-tauri/src/ai/: dual_brain.rs  gemini_live.rs  groq.rs  mod.rs
src-tauri/src/audio/: mic.rs  mod.rs
src-tauri/src/capture/: mod.rs  screen.rs
src-tauri/src/db/: captures.rs  conversations.rs  export.rs  messages.rs  mod.rs  profiles.rs  vault.rs  wipe.rs
src-tauri/src/hotkeys/: actions.rs  mod.rs  registry.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/settings/: persist.rs
src-tauri/src/window/: chrome.rs  helpers.rs  layout.rs  mod.rs  overlay.rs  stealth.rs  tray.rs
src/components/: ChatStream.tsx  CluelyLogo.tsx  CompactPill.tsx  DevPanel.tsx  HotkeyHintBar.tsx  HotkeyRebindSection.tsx  InputBar.tsx  MicButton.tsx  QuickActionChips.tsx  RecordingPill.tsx  ScreenshotPreview.tsx  ScreenshotTray.tsx  SessionTimeline.tsx  SessionToolbar.tsx  Sidebar.tsx  SmartToggle.tsx  Spinner.tsx  StreamingCursor.tsx  TeleprompterStrip.tsx  TypingIndicator.tsx  VuMeter.tsx  ui.tsx
src/lib/: db-types.ts  profiles.ts  router.ts  session-persist.ts  store.ts  tauri.ts  useOverlayChrome.ts  utils.ts
src/routes/: Overlay.tsx  Settings.tsx
src/routes/views/: AICustomizeView.tsx  AssistantView.tsx  CustomizeView.tsx  HelpView.tsx  HistoryView.tsx  MainView.tsx  OnboardingView.tsx  SettingsView.tsx
src/styles/: globals.css
