[package]
name = "cluely-hidden"
version = "0.5.0"
description = "Stealth AI assistant overlay for macOS"
authors = ["Raj Pabnani"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cluely_hidden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }

# ---- Phase 5 — AI Live client (Gemini Multimodal Live bidi WebSocket) ----
futures-util = "0.3"
tokio-tungstenite = "0.21"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }

# Phase 3B — Screen capture pipeline
xcap = "0.4"
image = { version = "0.25", features = ["png"] }
dirs = "5"

# Phase 6 — Microphone capture pipeline
cpal = "0.15"

[features]
# This feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
